View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026182 | Community | OCCT:Shape Healing | public | 2015-05-04 12:34 | 2015-05-14 16:39 |
Reporter | Timo | Assigned To | abv | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0026182: Calling ShapeFix_FixSmallFace.RemoveSmallFaces() always leads to stack overflow | ||||
Description | The functions ShapeFix_FixSmallFace::RemoveSmallFaces and SplitFaces call each other. Therefore, calling one of the functions always leads to a stack overflow. The functions are defined as follows: TopoDS_Shape ShapeFix_FixSmallFace::RemoveSmallFaces() { myShape = SplitFaces(); ... } TopoDS_Shape ShapeFix_FixSmallFace::SplitFaces() { myShape = RemoveSmallFaces(); ... } It seems, these functions currently have no use and should be removed or corrected. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26182 has been created by abv. SHA-1: 713762b0eddfee52da82153c24b8e12fcf7e94dd Detailed log of new commits: Author: abv Date: Wed May 6 06:20:29 2015 +0300 0026182: Calling ShapeFix_FixSmallFace.RemoveSmallFaces() always leads to stack overflow Unused methods RemoveSmallFaces() and SplitFaces() are removed. |
|
Offending methods removed, please integrate branch CR26182 (no testing is required) |
|
Dear BugMaster, Branch CR26182 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 713762b0eddfee52da82153c24b8e12fcf7e94dd Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 4 (4 on master) Windows: 0 (0 on master) |
|
Branch CR26182 has been deleted by inv. SHA-1: 713762b0eddfee52da82153c24b8e12fcf7e94dd |
occt: master 0bbdddae 2015-05-06 03:20:29 Committer: abv Details Diff |
0026182: Calling ShapeFix_FixSmallFace.RemoveSmallFaces() always leads to stack overflow Unused methods RemoveSmallFaces() and SplitFaces() are removed. |
Affected Issues 0026182 |
|
mod - src/ShapeFix/ShapeFix_FixSmallFace.cdl | Diff File | ||
mod - src/ShapeFix/ShapeFix_FixSmallFace.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-05-04 12:34 | Timo | New Issue | |
2015-05-04 12:34 | Timo | Assigned To | => msv |
2015-05-04 17:21 | msv | Assigned To | msv => gka |
2015-05-04 17:21 | msv | Category | OCCT:Modeling Algorithms => OCCT:Shape Healing |
2015-05-06 06:44 | git | Note Added: 0040596 | |
2015-05-06 06:45 | abv | Note Added: 0040597 | |
2015-05-06 06:45 | abv | Status | new => resolved |
2015-05-06 06:45 | abv | Steps to Reproduce Updated | |
2015-05-06 06:45 | abv | Assigned To | gka => bugmaster |
2015-05-06 06:45 | abv | Status | resolved => reviewed |
2015-05-06 14:27 |
|
Assigned To | bugmaster => mkv |
2015-05-06 19:28 |
|
Note Added: 0040676 | |
2015-05-06 19:28 |
|
Assigned To | mkv => bugmaster |
2015-05-06 19:28 |
|
Status | reviewed => tested |
2015-05-06 19:28 |
|
Test case number | => Not needed |
2015-05-08 15:49 | abv | Changeset attached | => occt master 0bbdddae |
2015-05-08 15:49 | abv | Assigned To | bugmaster => abv |
2015-05-08 15:49 | abv | Status | tested => verified |
2015-05-08 15:49 | abv | Resolution | open => fixed |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:30 |
|
Fixed in Version | => 6.9.0 |
2015-05-14 16:39 | git | Note Added: 0041133 |