0026182: Calling ShapeFix_FixSmallFace.RemoveSmallFaces() always leads to stack overflow

Unused methods RemoveSmallFaces() and SplitFaces() are removed.